updated product page

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
 
     <!--Best seller section-->
     <div class="p-4 text-center">
-      <h1 class="font-bold mt-5 text-3xl">Best Seller</h1>
+      <h2 class="font-bold mt-5 text-3xl">Best Seller</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
-        <div class="">
+        <div>
           <img
             src="./images/bestseller_1.jpg"
             class="inline hover:shadow-xl transform hover:-translate-y-2"
           />
-          <h1>Rose Plant</h1>
+          <p>Rose Plant</p>
           <p>$20</p>
         </div>
         <div>
