--- a/product.html
+++ b/product.html
@@ -41,18 +41,129 @@
           <a class="hover:underline hover:text-black" href="">Products</a>
         </li>
         <li>
-          <a class="hover:underline hover:text-black" href="./contact.html">Contact</a>
+          <a class="hover:underline hover:text-black" href="./contact.html"
+            >Contact</a
+          >
         </li>
       </ul>
     </nav>
-    <!--footer-->
-    <div class="bg-green-100 p-10 flex flex-col gap-5">
-        <h2 class="font-bold text-4xl">Greenden</h2>
-        <p>
-          The Standard chunk of Lorem, ipsum dolor sit amet consectetur
-          adipisicing elit.
-        </p>
-        <p>@ 2021 Greenden.com</p>
+    <!--product-->
+    <div class="text-center">
+      <h2 class="text-3xl font-bold text-center mt-5">Our Products</h2>
+      <input
+        type="text"
+        class="border border-gray-400 p-5 m-3 rounded h-2.5 placeholder-gray-400"
+        style="width: 80%"
+        placeholder="Search for a Product.."
+      />
+      <div class="grid grid-cols-2 mt-5 gap-5 md:grid-cols-4 md:grid-rows-3">
+        <div>
+          <img
+            src="./images/bestseller_2.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Rare plant</p>
+          <p>$50</p>
+        </div>
+        <div>
+          <img  
+            src="./images/bestseller_4.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Money plant</p>
+          <p>$30</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_1.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Rose plant</p>
+          <p>$20</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_3.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Tiger plant</p>
+          <p>$35</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_3.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Tiger plant</p>
+          <p>$35</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_1.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Rose plant</p>
+          <p>$20</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_4.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Money plant</p>
+          <p>$30</p>
+        </div>
+        <div>
+          <img
+            src="./images/bestseller_2.jpg"
+            class="inline hover:shadow-xl transform hover:-translate-y-2"
+          />
+          <p>Rare plant</p>
+          <p>$50</p>
+        </div>
+        <div>
+            <img
+              src="./images/bestseller_4.jpg"
+              class="inline hover:shadow-xl transform hover:-translate-y-2"
+            />
+            <p>Money plant</p>
+            <p>$30</p>
+          </div>
+          <div>
+              <img
+                src="./images/bestseller_2.jpg"
+                class="inline hover:shadow-xl transform hover:-translate-y-2"
+              />
+              <p>Rare plant</p>
+              <p>$50</p>
+            </div>
+            <div>
+              <img
+                src="./images/bestseller_1.jpg"
+                class="inline hover:shadow-xl transform hover:-translate-y-2"
+              />
+              <p>Rose plant</p>
+              <p>$20</p>
+            </div>
+            <div> 
+              <img
+                src="./images/bestseller_3.jpg"
+                class="inline hover:shadow-xl transform hover:-translate-y-2"
+              />
+              <p>Tiger plant</p>
+              <p>$35</p>
+            </div>
       </div>
+    </div>
+
+    <!--footer-->
+    <div class="bg-green-100 p-10 flex flex-col gap-5 mt-5">
+    <h2 class="font-bold text-4xl">Greenden</h2>
+    <p>
+    The Standard chunk of Lorem, ipsum dolor sit amet consectetur
+    adipisicing elit.
+    </p>
+    <p>@ 2021 Greenden.com</p>
+    </div>
   </body>
 </html>
